--- a/LandingPage.html
+++ b/LandingPage.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="landingpagestyles.css">
     <title>Start (:</title>
   </head>
-  <h1>Amelia Perez</h1>
+  <h1>let's get started with CSS !</h1>
   <h3>click <a href="css/index.html">here</a> to begin learning about CSS!</h3>
 </html>
